<resources>
    <string name="app_name">Jeffy</string>
    <string name="tvBienvenida">!Bienvenido a IAssistant, escoge el personaje con quien quieres interactuar!
    </string>
    <string name="tvJsplash">IASSISTANT18</string>
    <string name="tvIzzy">Izzy</string>
    <string name="tvtituloregistro">REGISTROS</string>
    <string name="tvIZZY">IZZY</string>
    <string name="tvJEFFY">JEFFY</string>
    <string name="tvJeffy">Jeffy</string>
    <string name="tvescuchandoizzy">Escuchando</string>
    <string name="tvrespondiendoizzy">Respondiendo</string>
    <string name="tvescuchandojeffy">Escuchando</string>
    <string name="tvrespondiendojeffy">Respondiendo</string>
    <string name="tvescuchandotituloizzy">Escuchando</string>
    <string name="tvrespondiendotituloizzy">Respondiendo</string>
    <string name="tvescuchandotitulojeffy">Escuchando</string>
    <string name="tvrespondiendotitulojeffy">Respondiendo</string>
    <string name="imgmicroizzy">.</string>
    <string name="imgizzy">.</string>
    <string name="imgjeffy">.</string>
    <string name="imgmicrojeffy">.</string>
    <string name="botonjeffy">.</string>
    <string name="botonizzy">.</string>
</resources>
