<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Registros">

    <TextView
            android:text="@string/botonizzy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/regijeffi" app:layout_constraintStart_toEndOf="@+id/jefy"
            android:layout_marginStart="40dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/regizzi" android:fontFamily="casual" android:textSize="24sp"/>
    <TextView
            android:text="@string/botonjeffy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/regizzi" app:layout_constraintStart_toEndOf="@+id/izzi"
            android:layout_marginStart="52dp" android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" android:fontFamily="casual" android:textSize="24sp"/>
    <TextView
            android:text="@string/tvJEFFY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/jefy" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/izzi" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="28dp" android:fontFamily="casual" android:textSize="24sp"/>
    <TextView
            android:text="@string/tvtituloregistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" android:fontFamily="casual"
            android:textSize="24sp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/tvIZZY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/izzi" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="28dp"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:textSize="24sp" android:fontFamily="casual"/>
</android.support.constraint.ConstraintLayout>