<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp" app:srcCompat="@drawable/asistente"
            android:id="@+id/asistente"
            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:contentDescription="@string/imgjeffy"/>
    <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="70dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            app:layout_constraintTop_toBottomOf="@+id/asistente" android:layout_marginTop="24dp"
            android:id="@+id/cardView" android:padding="20dp">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/tvescuchandotitulojeffy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/tvescuchandojeffytit" android:enabled="false"
                    android:textColor="@color/cardview_dark_background"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/tvescuchandojeffy"
                    tools:text="@string/tvescuchandojeffy" android:text="@string/tvescuchandojeffy"
                    android:contentDescription="@string/tvescuchandojeffy"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="70dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            app:layout_constraintTop_toBottomOf="@+id/cardView" android:layout_marginTop="28dp"
            android:id="@+id/cardView2" app:layout_constraintHorizontal_bias="1.0" android:padding="20dp">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/tvrespondiendojeffy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/tvrespondiendojeffytit"
                    android:textColor="@color/cardview_dark_background" android:enabled="false"
                    tools:text="@string/tvrespondiendotitulojeffy"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/tvrespondiendojeffy"
                    tools:text="@string/tvrespondiendojeffy" android:text="@string/tvrespondiendojeffy"
                    android:contentDescription="@string/tvrespondiendojeffy"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp" app:srcCompat="@drawable/microjeffy"
            android:id="@+id/microjeffy" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/cardView2"
            app:layout_constraintVertical_bias="1.0" android:contentDescription="@string/imgmicrojeffy"/>
</android.support.constraint.ConstraintLayout>